# humorous-oil

幽默油滴/seuphyx-main/: MANIFEST.in  README.md  pyproject.toml  start-streamlit-8501.cmd  视觉自动测量模块-设计方案.md
幽默油滴/seuphyx-main/2026.06.16/oil_drop_1111111111_dhy/: oil_drop.csv  oil_drop_vision.csv
幽默油滴/seuphyx-main/2026.07.03/oil_drop_1111111111_dhy/: oil_drop.csv
幽默油滴/seuphyx-main/2026.07.04/oil_drop_1111111111_dhy/: oil_drop.csv  oil_drop_raw.csv
幽默油滴/seuphyx-main/src/SEUPhyX.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
幽默油滴/seuphyx-main/src/seuphyx/cli/: main.py
幽默油滴/seuphyx-main/src/seuphyx/core/: __init__.py
幽默油滴/seuphyx-main/src/seuphyx/core/oil/: app.py  vision.py
幽默油滴/seuphyx-main/src/seuphyx/core/oil/tabs/: __init__.py  regression.py  tab_classify.py  tab_record.py  tab_regress.py  tab_report.py  tab_train.py  tab_vision.py
幽默油滴/seuphyx-main/src/seuphyx/data/: points_svm_pipeline.joblib.bak
幽默油滴/seuphyx-main/src/seuphyx/web/: __init__.py  utils.py
超级无敌幽默油滴/: CODEX_CONTEXT.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  start-streamlit-8501.cmd  stop-streamlit-8501.cmd  streamlit_app.py  vision_standalone好.py  vision参考.py
超级无敌幽默油滴/2026.07.06/oil_drop_111111111_dhy/: oil_drop.csv  oil_drop_raw.csv
超级无敌幽默油滴/2026.07.08/oil_drop_1111111111_dhy/: oil_drop.csv  oil_drop_raw.csv
超级无敌幽默油滴/2026.07.08/oil_drop_111111111_dhy/: oil_drop.csv
超级无敌幽默油滴/src/humoil/cli/: main.py
超级无敌幽默油滴/src/humoil/core/: __init__.py
超级无敌幽默油滴/src/humoil/core/oil/: app.py  utils.py  vision_standalone.py
超级无敌幽默油滴/src/humoil/core/oil/tabs/: __init__.py  regression.py  tab_classify.py  tab_record.py  tab_regress.py  tab_report.py  tab_train.py  tab_vision.py
超级无敌幽默油滴/src/humoil/data/: Dockerfile  oil_drop_reference.csv  oil_drop_reference.csv.bak  points_svm_pipeline.joblib
超级无敌幽默油滴/src/humoil/web/: __init__.py  utils.py
超级无敌幽默油滴/tools/: build_millikan_ai_report.py
